--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -2783,7 +2783,7 @@ button,
   margin: 0 auto;
 }
 
-.reviews__up-button {
+.reviews__up-buttonn {
   right: 0;
   bottom: -51px;
   position: absolute;
